force-app/main/default/objects/Account/fields/Score_Fundflow__c.field-meta.xml
<CustomField>
    <fullName>Score_Fundflow__c</fullName>
    <label>Score - Fundflow</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>