force-app/main/default/objects/Account/fields/Score_Industry__c.field-meta.xml
<CustomField>
    <fullName>Score_Industry__c</fullName>
    <label>Score - Industry</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>