force-app/main/default/objects/Account/fields/Score_Legal_Structure__c.field-meta.xml
<CustomField>
    <fullName>Score_Legal_Structure__c</fullName>
    <label>Score - Legal Structure</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>