force-app/main/default/objects/Account/fields/Score_Primary_Source_of_Wealth__c.field-meta.xml
<CustomField>
    <fullName>Score_Primary_Source_of_Wealth__c</fullName>
    <label>Score - Primary Source of Wealth</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>