force-app/main/default/objects/Account/fields/Score_Services__c.field-meta.xml
<CustomField>
    <fullName>Score_Services__c</fullName>
    <label>Score - Services</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>