force-app/main/default/objects/Account/fields/Score_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Score_Transaction__c</fullName>
    <label>Score - Transaction</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>