force-app/main/default/objects/Account/fields/Service_Risk_Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Risk_Assessment_Date__c</fullName>
    <label>Service Risk Assessment Date</label>
    <type>Date</type>
</CustomField>