force-app/main/default/objects/Account/fields/Service_Risk_Assessment_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Service_Risk_Assessment_Expiry__c</fullName>
    <label>Service Risk Assessment Expiry</label>
    <type>Date</type>
</CustomField>