force-app/main/default/objects/Account/fields/Serviced_Locations__c.field-meta.xml
<CustomField>
    <fullName>Serviced_Locations__c</fullName>
    <label>Serviced Locations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>