force-app/main/default/objects/Account/fields/Services_Available_Partner_Other__c.field-meta.xml
<CustomField>
    <fullName>Services_Available_Partner_Other__c</fullName>
    <label>Service(s) Available (Partner) - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>