force-app/main/default/objects/Account/fields/SOC_1_2__c.field-meta.xml
<CustomField>
    <fullName>SOC_1_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SOC 1 / 2</label>
    <type>Checkbox</type>
</CustomField>