force-app/main/default/objects/Account/fields/Static_Field_Hierarchy_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Static_Field_Hierarchy_Calculation__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Static Field - Hierarchy Calculation</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>