force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Given Notice</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Do Not Use</fullName>
                <isActive>false</isActive>
                <label>Do Not Use</label>
            </value>
            <value>
                <fullName>Live Client</fullName>
                <isActive>false</isActive>
                <label>Live Client</label>
            </value>
            <value>
                <fullName>Live No Client</fullName>
                <isActive>false</isActive>
                <label>Live No Client</label>
            </value>
            <value>
                <fullName>Not Proceeding</fullName>
                <isActive>false</isActive>
                <label>Not Proceeding</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
                <isActive>false</isActive>
                <label>On Hold</label>
            </value>
            <value>
                <fullName>Potential (DD In Progress)</fullName>
                <isActive>false</isActive>
                <label>Potential (DD In Progress)</label>
            </value>
            <value>
                <fullName>Prospect (DD Complete)</fullName>
                <isActive>false</isActive>
                <label>Prospect (DD Complete)</label>
            </value>
            <value>
                <fullName>Transitioned</fullName>
                <isActive>false</isActive>
                <label>Transitioned</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>