force-app/main/default/objects/Account/fields/Termination_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>Termination_Reason_Other__c</fullName>
    <label>Termination Reason - Other</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>