force-app/main/default/objects/Account/fields/Termination_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Termination_Reasons__c</fullName>
    <inlineHelpText>Termination Reason(s) - Non-Service Related</inlineHelpText>
    <label>Termination Reason(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chose Competitor</fullName>
            </value>
            <value>
                <fullName>Acquisition / Merger</fullName>
            </value>
            <value>
                <fullName>Contract Expired / Not Renewed</fullName>
            </value>
            <value>
                <fullName>Business Closure</fullName>
            </value>
            <value>
                <fullName>Leadership Change</fullName>
            </value>
            <value>
                <fullName>Consolidation to fewer vendors</fullName>
            </value>
            <value>
                <fullName>BM decisions to offboard client</fullName>
            </value>
            <value>
                <fullName>Pricing too high</fullName>
            </value>
            <value>
                <fullName>Budget Constraints</fullName>
            </value>
            <value>
                <fullName>Perceived Lack of ROI</fullName>
            </value>
            <value>
                <fullName>Service Quality</fullName>
            </value>
            <value>
                <fullName>Unresolved support issues</fullName>
            </value>
            <value>
                <fullName>Taken in House</fullName>
            </value>
            <value>
                <fullName>Change of Vendor</fullName>
            </value>
            <value>
                <fullName>Legal / Compliance Concerns</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>