force-app/main/default/objects/Account/fields/Total_Descendants__c.field-meta.xml
<CustomField>
    <fullName>Total_Descendants__c</fullName>
    <formula>Direct_Children__c + Descendants_Sum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Descendants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>