force-app/main/default/objects/Account/fields/Total_Global_Headcount__c.field-meta.xml
<CustomField>
    <fullName>Total_Global_Headcount__c</fullName>
    <label>Total Global Headcount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>