force-app/main/default/objects/Account/fields/Total_Global_Locations__c.field-meta.xml
<CustomField>
    <fullName>Total_Global_Locations__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Total Global Locations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>