force-app/main/default/objects/Account/fields/Total_Global_Locations_F__c.field-meta.xml
<CustomField>
    <fullName>Total_Global_Locations_F__c</fullName>
    <formula>IF(
NOT(ISBLANK(Parent.Parent.Parent.Parent.ParentId)),
Parent.Parent.Parent.Parent.Direct_Children__c + 
Parent.Parent.Parent.Direct_Children__c + 
Parent.Parent.Direct_Children__c + 
Parent.Direct_Children__c + 
Direct_Children__c,
IF(
NOT(ISBLANK(Parent.Parent.Parent.ParentId)),
Parent.Parent.Parent.Direct_Children__c + 
Parent.Parent.Direct_Children__c + 
Parent.Direct_Children__c + 
Direct_Children__c,
IF(
NOT(ISBLANK(Parent.Parent.ParentId)),
Parent.Parent.Direct_Children__c + 
Parent.Direct_Children__c + 
Direct_Children__c,
IF(
NOT(ISBLANK(Parent.ParentId)),
Parent.Direct_Children__c + 
Direct_Children__c,
IF(
NOT(ISBLANK(ParentId)),Direct_Children__c,
NULL
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Global Locations (F)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>