force-app/main/default/objects/Account/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transaction</label>
    <type>Checkbox</type>
</CustomField>