force-app/main/default/objects/Account/fields/Ultimate_Parent_Company__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent_Company__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Parent.Parent.Parent.Parent.ParentId)),
    HYPERLINK(&quot;/&quot; &amp; Parent.Parent.Parent.Parent.ParentId, Parent.Parent.Parent.Parent.Parent.Name, &quot;_self&quot;),
    IF(
        NOT(ISBLANK(Parent.Parent.Parent.ParentId)),
        HYPERLINK(&quot;/&quot; &amp; Parent.Parent.Parent.ParentId, Parent.Parent.Parent.Parent.Name, &quot;_self&quot;),
        IF(
            NOT(ISBLANK(Parent.Parent.ParentId)),
            HYPERLINK(&quot;/&quot; &amp; Parent.Parent.ParentId, Parent.Parent.Parent.Name, &quot;_self&quot;),
            IF(
                NOT(ISBLANK(Parent.ParentId)),
                HYPERLINK(&quot;/&quot; &amp; Parent.ParentId, Parent.Parent.Name, &quot;_self&quot;),
                IF(
                    NOT(ISBLANK(ParentId)),
                    HYPERLINK(&quot;/&quot; &amp; ParentId, Parent.Name, &quot;_self&quot;),
                    NULL
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>There is a maximum of 5 levels in the account hierarchy.</inlineHelpText>
    <label>Ultimate Parent Company</label>
    <type>Text</type>
</CustomField>