force-app/main/default/objects/Account/fields/Ultimate_Parent_Company_Address__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent_Company_Address__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Parent.Parent.Parent.Parent.ParentId)),
    Parent.Parent.Parent.Parent.Parent.Address_Concatenated__c,
    IF(
        NOT(ISBLANK(Parent.Parent.Parent.ParentId)),
        Parent.Parent.Parent.Parent.Address_Concatenated__c,
        IF(
            NOT(ISBLANK(Parent.Parent.ParentId)),
            Parent.Parent.Parent.Address_Concatenated__c,
            IF(
                NOT(ISBLANK(Parent.ParentId)),
                Parent.Parent.Address_Concatenated__c,
                IF(
                    NOT(ISBLANK(ParentId)),
                    Parent.Address_Concatenated__c,
                    NULL
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ultimate Parent Company Address</label>
    <type>Text</type>
</CustomField>