force-app/main/default/objects/Account/fields/White_Label_Partner__c.field-meta.xml
<CustomField>
    <fullName>White_Label_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>White Label (Partner)</label>
    <type>Checkbox</type>
</CustomField>