force-app/main/default/objects/Account/fields/Xero_Id__c.field-meta.xml
<CustomField>
    <fullName>Xero_Id__c</fullName>
    <externalId>true</externalId>
    <label>Xero Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>