force-app/main/default/objects/Account/recordTypes/Affiliate.recordType-meta.xml
<RecordType>
    <fullName>Affiliate</fullName>
    <active>true</active>
    <label>Affiliate</label>
</RecordType>